--- a/newDesktop/app/client/views/setting/import-sheet.html
+++ b/newDesktop/app/client/views/setting/import-sheet.html
@@ -8,6 +8,9 @@
 <form action="/showSheetUploadForm" enctype="multipart/form-data" method="post">
 	    <input type="radio" name="format" value="xlsx">xlsx<br>
         <input type="radio" name="format" value="csv">csv<br>
+		<br><br>
+		<input type="radio" name="sheetType" value="amazon">amazon<br>
+        <input type="radio" name="sheetType" value="flipkart">flipkart<br>
 		<input type="file" name="upload" multiple="multiple"><br>
 		<input type="submit" value="Upload">
 	    </form>
