--- a/newDesktop/app/client/views/setting/view-sheet.html
+++ b/newDesktop/app/client/views/setting/view-sheet.html
@@ -4,7 +4,10 @@
 </head>
 <body>
 
-<a href="/viewData">acct trans</a>
-
+<a href="/viewDataTrans">Account Transactions</a>
+<br>
+<a href="/viewDataTransEntry">Account Transactions Entry</a>
+<br>
+<a href="/">Back</a>
 </body>
 </html>
