--- a/newDesktop/app/client/views/setting/import-sheet.html
+++ b/newDesktop/app/client/views/setting/import-sheet.html
@@ -1,18 +1,114 @@
-<!DOCTYPE html>
-<html>
-<head>
-  
-</head>
-<body>
 
-<form action="/showSheetUploadForm" enctype="multipart/form-data" method="post">
-	    <input type="radio" name="format" value="xlsx">xlsx<br>
-        <input type="radio" name="format" value="csv">csv<br>
-		<br><br>
+<div class="row clearfix" ng-if="main.dashboard=='importsheet'">
+
+<script src="jquery-1.9.1.js"></script>
+<script src="jQuery.AjaxFileUpload.js"></script>
+
+<script>
+function validator()
+{
+
+ var fileObject;
+ 
+   if(formatValidator()){
+   
+   var formatObject = document.getElementsByName('format');
+   var formatSelected;
+   for(var i = 0; i < formatObject.length; i++)
+  { 
+   if(formatObject[i].checked){formatSelected = formatObject[i].value;}
+  }
+   fileObject=document.getElementById('upload');
+  
+   if(fileObject.value!=''){
+     $('input[type=file]').val(''); 
+    
+   }
+   else {
+   console.log( document.getElementById('upload'));
+   document.getElementById('upload').setAttribute("accept","."+formatSelected);}
+   }
+   else return false;
+   
+}  
+ function formatValidator()
+ {
+  var formatObject = document.getElementsByName('format');
+  if(formatObject[0].checked||formatObject[1].checked)return true;
+  else return false;
+}
+
+ function sheetValidator(){
+   var sheetTypeObject = document.getElementsByName('sheetType');
+  if(sheetTypeObject[0].checked||sheetTypeObject[1].checked)return true;
+  else return false;
+ } 
+ 
+ function extensionValidator(){
+  var fileObject=document.getElementById('upload');
+   
+   if(fileObject.value!='')return true;
+   else return false;
+ 
+ }
+
+function finalValidator(){
+
+  if(formatValidator()&&sheetValidator()&&extensionValidator())return true;
+  else return false;
+  
+
+}
+
+function divInitializer(){
+  $('#successMessage').css('font-size','20px');
+  $('#successMessage').text('Fill the form carefully');
+  $('#successMessage').css('color','#000000')
+
+}
+
+</script>
+
+<script type="text/javascript">
+$('#successMessage').css('font-size','20px');
+$(function(){
+    $('#submit')
+	   .click(function (e1){
+	    console.log(finalValidator());
+	   if(finalValidator()){
+	  $('#my-form')
+      .submit( function( e ) {
+      $.ajax({
+      url: $("#my-form").prop('action'),
+      type: 'POST',
+      data: new FormData( this ),
+      processData: false,
+      contentType: false,
+	  success :function(data){
+	  $('#my-form')[0].reset();
+	 //  $('input[type=file]').val('');
+	  $('#successMessage').text(data['code']);
+	  $('#successMessage').css('color',"#"+data['color']);
+	  setInterval(divInitializer, 5000);
+	  }
+    });
+       e.preventDefault();
+        });
+	   }
+	   else {
+	   $('#successMessage').text('Please fill the form correctly');
+	     console.log('not valiedaot');}
+		e1.preventDefault
+		});
+});
+</script>
+<span id="successMessage" style="color:#000000">Fill the form carefully</span>
+<form id="my-form" action="showSheetUploadForm" method="post">
+	    <input type="radio" id="format" onchange="validator()" name="format" value="xlsx">xlsx<br>
+        <input type="radio" id="format"  onchange="validator()" name="format" value="csv">csv<br><br>
 		<input type="radio" name="sheetType" value="amazon">amazon<br>
         <input type="radio" name="sheetType" value="flipkart">flipkart<br>
-		<input type="file" name="upload" multiple="multiple"><br>
-		<input type="submit" value="Upload">
-	    </form>
-</body>
-</html>
+		<input type="file" id="upload" name="upload" multiple="multiple"><br>
+		<input type="submit" id="submit" value="submit" name="submit">
+	</form>
+</div>
