--- a/newDesktop/app/client/views/setting/view-sheet.html
+++ b/newDesktop/app/client/views/setting/view-sheet.html
@@ -1,13 +1,76 @@
-<html>
-<head>
-<title>all the data</title>
-</head>
-<body>
 
-<a href="/viewDataTrans">Account Transactions</a>
+
+<div class="row clearfix" ng-if="main.dashboard=='viewsheet'">
+
+
+<script src="jquery-1.9.1.js"></script>
+<script>
+
+$('#viewTransAnchor').click(function(e1){
+ console.log('here in ajax');
+ var xmlhttp;
+ if (window.XMLHttpRequest)
+  {// code for IE7+, Firefox, Chrome, Opera, Safari
+  xmlhttp=new XMLHttpRequest();
+  }
+ else
+  {// code for IE6, IE5
+  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+  }
+  xmlhttp.open("GET","viewDataTrans",true);
+  xmlhttp.send();
+  xmlhttp.onreadystatechange=function()
+  {
+  if (xmlhttp.readyState==4 && xmlhttp.status==200)
+    {
+	//console.log(xmlhttp.responseText);
+	document.getElementById('viewDataTrans').style.display='block';
+	document.getElementById('viewDataTransEntry').style.display='none';
+    document.getElementById("viewTransDiv").innerHTML=xmlhttp.responseText;
+    }
+  }
+  //console.log(xmlhttp.responseText);
+//  document.getElementById("viewTransDiv").innerHTML=xmlhttp.responseText
+});
+
+$('#viewTransEntryAnchor').click(function(e1){
+ var xmlhttp;
+ if (window.XMLHttpRequest)
+  {// code for IE7+, Firefox, Chrome, Opera, Safari
+  xmlhttp=new XMLHttpRequest();
+  }
+ else
+  {// code for IE6, IE5
+  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+  }
+  xmlhttp.open("GET","viewDataTransEntry",true);
+  xmlhttp.send();
+  xmlhttp.onreadystatechange=function()
+  {
+  if (xmlhttp.readyState==4 && xmlhttp.status==200)
+    {
+	//console.log(xmlhttp.responseText);
+	document.getElementById('viewDataTrans').style.display='none';
+	document.getElementById('viewDataTransEntry').style.display='block';
+    document.getElementById("viewTransEntryDiv").innerHTML=xmlhttp.responseText;
+    }
+  }
+});
+
+</script>
+
+
+<div id="viewDataTrans">
+
+<a id="viewTransEntryAnchor" href="#" >Account Transactions Entry</a>
 <br>
-<a href="/viewDataTransEntry">Account Transactions Entry</a>
+<div id='viewTransDiv'></div>
+
+</div>
+
+
+<div id="viewDataTransEntry">
+<a id='viewTransAnchor' href="#" >Account Transactions</a>
 <br>
-<a href="/">Back</a>
-</body>
-</html>
+<div id='viewTransEntryDiv'></div>
+</div>
