--- a/newDesktop/app/client/views/wizard.html
+++ b/newDesktop/app/client/views/wizard.html
@@ -29,14 +29,14 @@
                     <a ng-click="wForm.index=6;">
                         <img src="../images/User.png" alt="" style="width:42px;height:42px;border:0">Settings</a>
                 </li>
-				<li ng-class="wForm.index==7?'active':''">
+				<!-- <li ng-class="wForm.index==7?'active':''">
                     <a ng-click="wForm.index=7;">
                         <img src="../images/User.png" alt="" style="width:42px;height:42px;border:0">Import Sheet</a>
                 </li>
 				<li ng-class="wForm.index==8?'active':''">
                     <a ng-click="wForm.index=8;">
                         <img src="../images/User.png" alt="" style="width:42px;height:42px;border:0">View Sheet</a>
-                </li>
+                </li> -->
             </ul>
         </div> 
 
@@ -48,9 +48,9 @@
             <div ng-if="wForm.index==4" id="PTM-setting" ng-include="'views/setting/PTM-setting-form.html'"></div>
             <div ng-if="wForm.index==5" id="tally-setting" ng-include="'views/setting/tally-setting-form.html'"></div>
             <div ng-if="wForm.index==6" id="other-setting" ng-include="'views/setting/other-setting-form.html'"></div>
-            <div ng-if="wForm.index==7" id="import-sheet" ng-include="'views/setting/import-sheet.html'"></div>
+           <!--  <div ng-if="wForm.index==7" id="import-sheet" ng-include="'views/setting/import-sheet.html'"></div>
             <div ng-if="wForm.index==8" id="view-sheet" ng-include="'views/setting/view-sheet.html'"></div>
-            
+            --> 
             <ul class="pager">
                 <li ng-if="wForm.index!=1" ng-click="wForm.index=wForm.index-1;"><a href="javascript:;">Previous</a></li>
                 <li ng-if="wForm.index!=6" ng-click="wForm.index=wForm.index+1;"><a href="javascript:;">Skip</a></li>
