--- a/newDesktop/app/client/views/setting/import-sheet.html
+++ b/newDesktop/app/client/views/setting/import-sheet.html
@@ -1,8 +1,8 @@
 
 <div class="row clearfix" ng-if="main.dashboard=='importsheet'">
 
-<script src="jquery-1.9.1.js"></script>
-<script src="jQuery.AjaxFileUpload.js"></script>
+<script src="scripts\jquery-1.9.1.js"></script>
+<script src="scripts\jQuery.AjaxFileUpload.js"></script>
 
 <script>
 function validator()
