--- a/newDesktop/app/client/views/setting/view-sheet.html
+++ b/newDesktop/app/client/views/setting/view-sheet.html
@@ -3,7 +3,7 @@
 <div class="row clearfix" ng-if="main.dashboard=='viewsheet'">
 
 
-<script src="jquery-1.9.1.js"></script>
+<script src="scripts\jquery-1.9.1.js"></script>
 <script>
 
 $('#viewTransAnchor').click(function(e1){
